# JSEAL

./: README.md  pom.xml
c/: CMakeLists.txt  batchencoder.cpp  ciphertext.cpp  ckksencoder.cpp  context.cpp  decryptor.cpp  encparam.cpp  encryptor.cpp  evaluator.cpp  galois_keys.cpp  integerencoder.cpp  keygenerator.cpp  modulus.cpp  plaintext.cpp  public_key.cpp  relin_keys.cpp  secret_key.cpp
src/main/java/org/homobit/jseal/: BatchEncoder.java  CKKSEncoder.java  CLibrary.java  Ciphertext.java  CoeffModulus.java  Decryptor.java  EncryptionParameterQualifiers.java  EncryptionParameters.java  Encryptor.java  Evaluator.java  Example1_bfv_basics.java  Example2_encoders.java  Example3_levels.java  Example4_CKKS_Basics.java  Example5_rotation.java  Example6_performance.java  GaloisKeys.java  IntegerEncoder.java  KeyGenerator.java  ParamsId.java  PlainModulus.java  Plaintext.java  PublicKey.java  RelinKeys.java  SchemeType.java  SealContext.java  SecLevelType.java  SecretKey.java  SmallModulus.java  Utils.java
